err/pydosh.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pydosh'...
Listing './lib/python3.5/site-packages/pydosh/delegates'...
Listing './lib/python3.5/site-packages/pydosh/dialogs'...
Compiling './lib/python3.5/site-packages/pydosh/dialogs/importDialog.py'...
***   File "./lib/python3.5/site-packages/pydosh/dialogs/importDialog.py", line 154
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pydosh/dialogs/loginDialog.py'...
***   File "./lib/python3.5/site-packages/pydosh/dialogs/loginDialog.py", line 42
    except ConnectionException, err:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pydosh/dialogs/settingsDialog.py'...
***   File "./lib/python3.5/site-packages/pydosh/dialogs/settingsDialog.py", line 76
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pydosh/models'...
Compiling './lib/python3.5/site-packages/pydosh/models/importModel.py'...
***   File "./lib/python3.5/site-packages/pydosh/models/importModel.py", line 302
    except DecoderError, exc:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/applications'...
Listing './share/python-wheels'...
